# pathprof

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: bench.sh  bench_iqr.sh  results-aorus.md
bench/compare/: main_baseline.cpp  main_cyg.cpp  main_plugin.cpp  main_raii.cpp  main_xray.cpp
docs/: THEORY.md
examples/itch-sim/: README.md  build.sh  itch_pipeline.h  main_baseline.cpp  main_cyg.cpp  main_plugin.cpp  main_raii.cpp  main_xray.cpp  sim.cpp
include/pathprof/: annotate.h  core.h  cyg.h  plugin_rt.h  raii.h  report.h  resolve.h  shm.h  xray.h
plugin/: PathProfPass.cpp
test/: verify.sh
tools/pathprof-top/: pathprof-top.cpp
